--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,88 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <!-- Просмотр камеры -->
-    <androidx.camera.view.PreviewView
-        android:id="@+id/previewView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:scaleType="fillCenter" />
-
-    <!-- Наложение изображения -->
-    <ImageView
-        android:id="@+id/overlayImageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:scaleType="matrix"
-        android:visibility="gone"
-        android:contentDescription="@string/overlay_image_description" />
-
-    <!-- Основной чекбокс видимости элементов управления -->
-    <CheckBox
-        android:id="@+id/controlsVisibilityCheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/controls_label"
-        android:checked="true"
-        android:textColor="@android:color/white"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- Чекбокс для показа кнопки "Слои", когда контролы скрыты -->
-    <CheckBox
-        android:id="@+id/showLayersWhenControlsHiddenCheckbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:checked="false"
-        android:textColor="@android:color/white"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/controlsVisibilityCheckbox" />
-
-    <!-- Группа для управления видимостью основных контролов -->
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/controlsGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="load_image_button,pencilModeSwitch,greenModeCheckbox,layerSelectButton,saveParamsButton,loadParamsButton,linkZoomSwitch,zoom_slider,transparency_slider"
-        android:visibility="visible" />
-
-    <!-- Кнопка Загрузить -->
-    <Button
-        android:id="@+id/load_image_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Загрузить"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!-- ... код до pencilModeSwitch ... -->
 
     <!-- Переключатель Карандаш -->
     <androidx.appcompat.widget.SwitchCompat
@@ -100,24 +16,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/load_image_button" />
 
-    <!-- ЧЕКБОКС ДЛЯ ЗЕЛЕНОГО РЕЖИМА -->
+    <!-- УПРОЩЕННЫЙ ЧЕКБОКС ДЛЯ ЗЕЛЕНОГО РЕЖИМА -->
     <CheckBox
         android:id="@+id/greenModeCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="Зел."
-        android:checked="false"
-        android:textColor="@android:color/white"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
-        android:visibility="gone" <!-- Комментарий здесь удален -->
         app:layout_constraintStart_toEndOf="@id/pencilModeSwitch"
         app:layout_constraintTop_toTopOf="@id/pencilModeSwitch"
-        app:layout_constraintBottom_toBottomOf="@id/pencilModeSwitch"/>
-
+        app:layout_constraintBottom_toBottomOf="@id/pencilModeSwitch" />
 
     <!-- Кнопка Слои -->
      <Button
@@ -131,87 +37,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pencilModeSwitch"/>
 
-    <!-- Кнопка Сохранить Параметры -->
-    <Button
-        android:id="@+id/saveParamsButton"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Сохр.Пар."
-        android:textSize="12sp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layerSelectButton"/>
-
-    <!-- Кнопка Загрузить Параметры -->
-    <Button
-        android:id="@+id/loadParamsButton"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="Загр.Пар."
-        android:textSize="12sp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:visibility="gone"
-        app:layout_constraintStart_toEndOf="@id/saveParamsButton"
-        app:layout_constraintTop_toTopOf="@id/saveParamsButton"
-        app:layout_constraintBottom_toBottomOf="@id/saveParamsButton"/>
-
-    <!-- Слайдер прозрачности -->
-    <com.google.android.material.slider.Slider
-        android:id="@+id/transparency_slider"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        android:valueFrom="0.0"
-        android:valueTo="1.0"
-        android:stepSize="0.05"
-        android:value="1.0"
-        android:visibility="gone"
-        android:enabled="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- Слайдер зума -->
-    <com.google.android.material.slider.Slider
-        android:id="@+id/zoom_slider"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:valueFrom="0.0"
-        android:valueTo="1.0"
-        android:stepSize="0.01"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@id/transparency_slider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Переключатель Связать зум -->
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/linkZoomSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="Связать зум"
-        android:textColor="@android:color/white"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="1"
-        android:shadowDy="1"
-        android:shadowRadius="1"
-        android:enabled="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/zoom_slider" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- ... остальной код ... -->
